unpackaged/objects/KolInternalContact__c.object
<CustomObject>
  <fields>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>InternalContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>KOL_Internal_Contacts</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>KolInformation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>KOL information</label>
    <referenceTo>Expert__c</referenceTo>
    <relationshipLabel>KOL Internal Contacts</relationshipLabel>
    <relationshipName>KolInternalContacts</relationshipName>
    <type>Lookup</type>
  </fields>
  <label>KOL Internal Contact</label>
  <nameField>
    <displayFormat>KIC-{0000}</displayFormat>
    <label>KOL Contact Name</label>
    <type>AutoNumber</type>
  </nameField>
  <pluralLabel>KOL Internal Contacts</pluralLabel>
  <sharingModel>ReadWrite</sharingModel>
</CustomObject>